@@ -14,13 +14,13 @@ import com.soprasteria.g4it.backend.apiuser.business.RoleService;
 import com.soprasteria.g4it.backend.apiuser.business.UserService;
 import com.soprasteria.g4it.backend.apiuser.business.WorkspaceService;
 import com.soprasteria.g4it.backend.apiuser.model.OrganizationBO;
-import com.soprasteria.g4it.backend.apiuser.model.SubscriberBO;
 import com.soprasteria.g4it.backend.apiuser.model.UserBO;
 import com.soprasteria.g4it.backend.apiuser.model.UserInfoBO;
+import com.soprasteria.g4it.backend.apiuser.model.WorkspaceBO;
 import com.soprasteria.g4it.backend.apiuser.modeldb.*;
 import com.soprasteria.g4it.backend.apiuser.repository.*;
 import com.soprasteria.g4it.backend.common.utils.Constants;
-import com.soprasteria.g4it.backend.common.utils.OrganizationStatus;
+import com.soprasteria.g4it.backend.common.utils.WorkspaceStatus;
 import com.soprasteria.g4it.backend.exception.AuthorizationException;
 import com.soprasteria.g4it.backend.exception.G4itRestException;
 import com.soprasteria.g4it.backend.server.gen.api.dto.LinkUserRoleRest;
@@ -55,7 +55,7 @@ class AdministratorWorkspaceServiceTest {
     UserRepository userRepository;
 
     @Mock
-    UserOrganizationRepository userOrganizationRepository;
+    UserWorkspaceRepository userWorkspaceRepository;
 
     @Mock
     WorkspaceRepository workspaceRepository;
@@ -74,7 +74,7 @@ class AdministratorWorkspaceServiceTest {
     private AuthService authService;
 
     @Mock
-    UserSubscriberRepository userSubscriberRepository;
+    UserOrganizationRepository userOrganizationRepository;
 
     @Mock
     UserService userService;
@@ -90,7 +90,7 @@ class AdministratorWorkspaceServiceTest {
         LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(organizationId,
                 Collections.singletonList(userRoleRest));
 
-        when(userOrganizationRepository.findByWorkspaceIdAndUserId(organizationId, userId)).thenReturn(Optional.empty());
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userId)).thenReturn(Optional.empty());
         when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(TestUtils.createOrganization()));
         when(userRepository.findById(userId)).thenReturn(Optional.of(User.builder().id(userId).build()));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
@@ -98,7 +98,7 @@ class AdministratorWorkspaceServiceTest {
         List<UserInfoBO> users = administratorWorkspaceService.linkUserToWorkspace(linkUserRoleRest, TestUtils.createUserBOAdminSub(), true);
         assertEquals(1, users.size());
         assertEquals(ROLE, users.getFirst().getRoles().getFirst());
-        verify(userOrganizationRepository, times(1)).save(any(UserWorkspace.class));
+        verify(userWorkspaceRepository, times(1)).save(any(UserWorkspace.class));
         verify(userRoleWorkspaceRepository, times(1)).saveAll(anyList());
     }
 
@@ -109,7 +109,7 @@ class AdministratorWorkspaceServiceTest {
         UserRoleRest userRoleRest = TestUtils.createUserRoleRest(userId, List.of());
         LinkUserRoleRest linkUserRoleRest = TestUtils.createLinkUserRoleRest(organizationId, Collections.singletonList(userRoleRest));
 
-        when(userOrganizationRepository.findByWorkspaceIdAndUserId(organizationId, userRoleRest.getUserId())).thenReturn(Optional.empty());
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userRoleRest.getUserId())).thenReturn(Optional.empty());
         when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(TestUtils.createOrganization()));
         when(userRepository.findById(userRoleRest.getUserId())).thenReturn(Optional.of(User.builder().id(userId).build()));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
@@ -117,7 +117,7 @@ class AdministratorWorkspaceServiceTest {
         List<UserInfoBO> users = administratorWorkspaceService.linkUserToWorkspace(linkUserRoleRest, TestUtils.createUserBOAdminSub(), true);
         assertEquals(1, users.size());
         assertEquals(List.of(), users.getFirst().getRoles());
-        verify(userOrganizationRepository, times(1)).save(any(UserWorkspace.class));
+        verify(userWorkspaceRepository, times(1)).save(any(UserWorkspace.class));
     }
 
     @Test
@@ -130,7 +130,7 @@ class AdministratorWorkspaceServiceTest {
                 Collections.singletonList(userRoleRest));
         UserWorkspace userWorkspace = TestUtils.createUserOrganization(organizationId, userId);
 
-        when(userOrganizationRepository.findByWorkspaceIdAndUserId(organizationId, userRoleRest.getUserId())).thenReturn(Optional.ofNullable(userWorkspace));
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userRoleRest.getUserId())).thenReturn(Optional.ofNullable(userWorkspace));
         when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(TestUtils.createOrganization()));
         when(userRepository.findById(userId)).thenReturn(Optional.of(User.builder().id(userId).build()));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
@@ -149,13 +149,13 @@ class AdministratorWorkspaceServiceTest {
 
         doNothing().when(administratorRoleService).hasAdminRightsOnAnySubscriberOrAnyOrganization(userBO);
 
-        List<SubscriberBO> result = administratorWorkspaceService.getWorkspaces(subscriberId, orgId, userBO);
+        List<OrganizationBO> result = administratorWorkspaceService.getWorkspaces(subscriberId, orgId, userBO);
 
         verify(administratorRoleService).hasAdminRightsOnAnySubscriberOrAnyOrganization(userBO);
         assertEquals(1, result.size());
 
-        SubscriberBO subscriberBO = result.getFirst();
-        assertEquals(1, subscriberBO.getOrganizations().size());
+        OrganizationBO organizationBO = result.getFirst();
+        assertEquals(1, organizationBO.getOrganizations().size());
     }
 
     @Test
@@ -178,16 +178,16 @@ class AdministratorWorkspaceServiceTest {
         Long subscriberId = 1L;
         Long orgId = 33L;
         String organizationName = "ORGANIZATION";
-        String updatedStatus = OrganizationStatus.TO_BE_DELETED.name();
+        String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpdateRest workspaceUpdateRest =
                 TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
-        OrganizationBO updatedOrganization = OrganizationBO.builder().id(orgId).name("UpdatedName").build();
+        WorkspaceBO updatedOrganization = WorkspaceBO.builder().id(orgId).name("UpdatedName").build();
 
         doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(userBO, subscriberId, orgId);
         when(workspaceService.updateWorkspace(orgId, workspaceUpdateRest, userBO.getId())).thenReturn(updatedOrganization);
 
-        OrganizationBO result = administratorWorkspaceService.updateWorkspace(orgId, workspaceUpdateRest, userBO);
+        WorkspaceBO result = administratorWorkspaceService.updateWorkspace(orgId, workspaceUpdateRest, userBO);
 
         verify(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(userBO, subscriberId, orgId);
         verify(workspaceService).updateWorkspace(orgId, workspaceUpdateRest, userBO.getId());
@@ -203,7 +203,7 @@ class AdministratorWorkspaceServiceTest {
         Long subscriberId = 1L;
         Long orgId = 33L;
         String organizationName = "ORGANIZATION";
-        String updatedStatus = OrganizationStatus.TO_BE_DELETED.name();
+        String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpdateRest workspaceUpdateRest =
                 TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
@@ -223,16 +223,16 @@ class AdministratorWorkspaceServiceTest {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         Long subscriberId = 1L;
         String organizationName = "ORGANIZATION";
-        String updatedStatus = OrganizationStatus.TO_BE_DELETED.name();
+        String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpdateRest workspaceUpdateRest =
                 TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
-        OrganizationBO expectedOrg = OrganizationBO.builder().id(33L).build();
+        WorkspaceBO expectedOrg = WorkspaceBO.builder().id(33L).build();
 
         when(workspaceService.createWorkspace(workspaceUpdateRest, userBO, subscriberId)).thenReturn(expectedOrg);
         when(roleService.isUserDomainAuthorized(userBO, subscriberId)).thenReturn(true);
         when(roleService.hasAdminRightsOnSubscriber(userBO, subscriberId)).thenReturn(true);
-        OrganizationBO result = administratorWorkspaceService.createWorkspace(workspaceUpdateRest, userBO, true);
+        WorkspaceBO result = administratorWorkspaceService.createWorkspace(workspaceUpdateRest, userBO, true);
 
         verify(administratorRoleService).hasSubscriberAdminOrDomainAccess(userBO, subscriberId, true, true);
         verify(workspaceService).createWorkspace(workspaceUpdateRest, userBO, subscriberId);
@@ -246,11 +246,11 @@ class AdministratorWorkspaceServiceTest {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         Long subscriberId = 1L;
         String organizationName = "ORGANIZATION";
-        String updatedStatus = OrganizationStatus.TO_BE_DELETED.name();
+        String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
         WorkspaceUpdateRest workspaceUpdateRest =
                 TestUtils.createOrganizationUpsert(subscriberId, organizationName, updatedStatus, dataRetentionDay);
-        OrganizationBO expectedOrg = OrganizationBO.builder().id(1L).name(organizationName).build();
+        WorkspaceBO expectedOrg = WorkspaceBO.builder().id(1L).name(organizationName).build();
 
         Workspace org = TestUtils.createOrganization();
         User userEntity = User.builder().id(1L).build();
@@ -259,17 +259,17 @@ class AdministratorWorkspaceServiceTest {
         when(workspaceRepository.findById(1L)).thenReturn(Optional.of(org));
         when(roleService.getAllRoles()).thenReturn(List.of(Role.builder().name(ROLE).build()));
         when(userRepository.findById(1L)).thenReturn(Optional.of(userEntity));
-        when(userOrganizationRepository.findByWorkspaceIdAndUserId(org.getId(), userBO.getId())).thenReturn(Optional.empty());
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(org.getId(), userBO.getId())).thenReturn(Optional.empty());
         when(roleService.isUserDomainAuthorized(userBO, subscriberId)).thenReturn(true);
         when(roleService.hasAdminRightsOnSubscriber(userBO, subscriberId)).thenReturn(false);
 
-        OrganizationBO result = administratorWorkspaceService.createWorkspace(workspaceUpdateRest, userBO, false);
+        WorkspaceBO result = administratorWorkspaceService.createWorkspace(workspaceUpdateRest, userBO, false);
 
         verify(workspaceService).createWorkspace(workspaceUpdateRest, userBO, subscriberId);
         verify(roleService).hasAdminRightsOnSubscriber(userBO, subscriberId);
         verify(userService).clearUserCache(userBO);
         verify(userRepository).findById(1L);
-        verify(userOrganizationRepository).save(any());
+        verify(userWorkspaceRepository).save(any());
         verify(userRoleWorkspaceRepository).saveAll(any());
 
         assertEquals(expectedOrg, result);
@@ -280,7 +280,7 @@ class AdministratorWorkspaceServiceTest {
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         Long subscriberId = 1L;
         String organizationName = "ORGANIZATION";
-        String updatedStatus = OrganizationStatus.TO_BE_DELETED.name();
+        String updatedStatus = WorkspaceStatus.TO_BE_DELETED.name();
         long dataRetentionDay = 7L;
 
         WorkspaceUpdateRest workspaceUpdateRest =
@@ -322,20 +322,20 @@ class AdministratorWorkspaceServiceTest {
         Workspace org = TestUtils.createOrganization();
 
         when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getSubscriber().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getSubscriber().getId()))).thenReturn(true);
+        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getOrganization().getId()), eq(org.getId()));
+        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getOrganization().getId()))).thenReturn(true);
 
         // Subscriber admin
         User adminUser = User.builder().id(1L).email("admin@domain.com").build();
         Role adminRole = Role.builder().name(Constants.ROLE_SUBSCRIBER_ADMINISTRATOR).build();
-        UserSubscriber userSubscriber = UserSubscriber.builder().user(adminUser).roles(List.of(adminRole)).build();
-        when(userSubscriberRepository.findBySubscriber(org.getSubscriber())).thenReturn(List.of(userSubscriber));
+        UserOrganization userOrganization = UserOrganization.builder().user(adminUser).roles(List.of(adminRole)).build();
+        when(userOrganizationRepository.findBySubscriber(org.getOrganization())).thenReturn(List.of(userOrganization));
 
         // Org user
         User orgUser = User.builder().id(2L).email("org@domain.com").build();
         Role orgRole = Role.builder().name(Constants.ROLE_ORGANIZATION_ADMINISTRATOR).build();
         UserWorkspace userWorkspace = UserWorkspace.builder().user(orgUser).roles(List.of(orgRole)).build();
-        when(userOrganizationRepository.findByOrganization(org)).thenReturn(List.of(userWorkspace));
+        when(userWorkspaceRepository.findByOrganization(org)).thenReturn(List.of(userWorkspace));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
@@ -350,20 +350,20 @@ class AdministratorWorkspaceServiceTest {
         Workspace org = TestUtils.createOrganization();
 
         when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getSubscriber().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getSubscriber().getId()))).thenReturn(false);
+        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getOrganization().getId()), eq(org.getId()));
+        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getOrganization().getId()))).thenReturn(false);
 
         User adminUser = User.builder().id(1L).email("admin@domain.com").build();
         Role adminRole = Role.builder().name(Constants.ROLE_SUBSCRIBER_ADMINISTRATOR).build();
-        UserSubscriber userSubscriber = UserSubscriber.builder().user(adminUser).roles(List.of(adminRole)).build();
-        when(userSubscriberRepository.findBySubscriber(org.getSubscriber())).thenReturn(List.of(userSubscriber));
+        UserOrganization userOrganization = UserOrganization.builder().user(adminUser).roles(List.of(adminRole)).build();
+        when(userOrganizationRepository.findBySubscriber(org.getOrganization())).thenReturn(List.of(userOrganization));
 
         User orgUser = User.builder().id(2L).email("org@domain.com").build();
         Role orgRole = Role.builder().name(Constants.ROLE_ORGANIZATION_ADMINISTRATOR).build();
         User userEntity = User.builder().id(3L).email("user@domain.com").build();
         Role userRole = Role.builder().name(Constants.ROLE_INVENTORY_READ).build();
 
-        when(userOrganizationRepository.findByOrganization(org)).
+        when(userWorkspaceRepository.findByOrganization(org)).
                 thenReturn(List.of(UserWorkspace.builder().user(orgUser).roles(List.of(orgRole)).build(),
                         UserWorkspace.builder().user(userEntity).roles(List.of(userRole)).build()));
 
@@ -380,7 +380,7 @@ class AdministratorWorkspaceServiceTest {
         Workspace org = TestUtils.createOrganization();
 
         when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getSubscriber().getId()), eq(org.getId()));
+        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getOrganization().getId()), eq(org.getId()));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         userBO.setEmail(Constants.SUPER_ADMIN_EMAIL);
@@ -388,8 +388,8 @@ class AdministratorWorkspaceServiceTest {
         User orgUser = User.builder().id(2L).email("user@domain.com").build();
         Role orgRole = Role.builder().name(Constants.ROLE_ORGANIZATION_ADMINISTRATOR).build();
         UserWorkspace userWorkspace = UserWorkspace.builder().user(orgUser).roles(List.of(orgRole)).build();
-        when(userOrganizationRepository.findByOrganization(org)).thenReturn(List.of(userWorkspace));
-        when(userSubscriberRepository.findBySubscriber(org.getSubscriber())).thenReturn(Collections.emptyList());
+        when(userWorkspaceRepository.findByOrganization(org)).thenReturn(List.of(userWorkspace));
+        when(userOrganizationRepository.findBySubscriber(org.getOrganization())).thenReturn(Collections.emptyList());
 
         List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
         assertEquals(1, result.size());
@@ -401,11 +401,11 @@ class AdministratorWorkspaceServiceTest {
         Workspace org = TestUtils.createOrganization();
 
         when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getSubscriber().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getSubscriber().getId()))).thenReturn(false);
+        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getOrganization().getId()), eq(org.getId()));
+        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getOrganization().getId()))).thenReturn(false);
 
         // No subscriber admins
-        when(userSubscriberRepository.findBySubscriber(org.getSubscriber())).thenReturn(Collections.emptyList());
+        when(userOrganizationRepository.findBySubscriber(org.getOrganization())).thenReturn(Collections.emptyList());
 
         // Two org users, one has super admin email, one does not
         User superAdminUser = User.builder().id(11L).email(Constants.SUPER_ADMIN_EMAIL).build();
@@ -415,7 +415,7 @@ class AdministratorWorkspaceServiceTest {
         User normalUser = User.builder().id(12L).email("user@domain.com").build();
         UserWorkspace userWorkspaceNormal = UserWorkspace.builder().user(normalUser).roles(List.of(orgRole)).build();
 
-        when(userOrganizationRepository.findByOrganization(org)).thenReturn(List.of(userWorkspaceSuper, userWorkspaceNormal));
+        when(userWorkspaceRepository.findByOrganization(org)).thenReturn(List.of(userWorkspaceSuper, userWorkspaceNormal));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
@@ -430,13 +430,13 @@ class AdministratorWorkspaceServiceTest {
         Workspace org = TestUtils.createOrganization();
 
         when(workspaceRepository.findById(org.getId())).thenReturn(Optional.of(org));
-        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getSubscriber().getId()), eq(org.getId()));
-        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getSubscriber().getId()))).thenReturn(false);
+        doNothing().when(administratorRoleService).hasAdminRightOnSubscriberOrOrganization(any(), eq(org.getOrganization().getId()), eq(org.getId()));
+        when(roleService.hasAdminRightsOnSubscriber(any(), eq(org.getOrganization().getId()))).thenReturn(false);
 
         User sharedUser = User.builder().id(1L).email("admin@domain.com").build();
         Role adminRole = Role.builder().name(Constants.ROLE_SUBSCRIBER_ADMINISTRATOR).build();
-        UserSubscriber userSubscriber = UserSubscriber.builder().user(sharedUser).roles(List.of(adminRole)).build();
-        when(userSubscriberRepository.findBySubscriber(org.getSubscriber())).thenReturn(List.of(userSubscriber));
+        UserOrganization userOrganization = UserOrganization.builder().user(sharedUser).roles(List.of(adminRole)).build();
+        when(userOrganizationRepository.findBySubscriber(org.getOrganization())).thenReturn(List.of(userOrganization));
 
         Role orgRole = Role.builder().name(Constants.ROLE_ORGANIZATION_ADMINISTRATOR).build();
         UserWorkspace userWorkspace = UserWorkspace.builder().user(sharedUser).roles(List.of(orgRole)).build();
@@ -445,7 +445,7 @@ class AdministratorWorkspaceServiceTest {
         User orgUser2 = User.builder().id(2L).email("user@domain.com").build();
         UserWorkspace userWorkspace2 = UserWorkspace.builder().user(orgUser2).roles(List.of(orgRole)).build();
 
-        when(userOrganizationRepository.findByOrganization(org)).thenReturn(List.of(userWorkspace, userWorkspace2));
+        when(userWorkspaceRepository.findByOrganization(org)).thenReturn(List.of(userWorkspace, userWorkspace2));
 
         UserBO userBO = TestUtils.createUserBO(List.of(ROLE));
         List<UserInfoBO> result = administratorWorkspaceService.getUsersOfWorkspace(org.getId(), userBO);
@@ -467,12 +467,12 @@ class AdministratorWorkspaceServiceTest {
         UserWorkspace userWorkspace = TestUtils.createUserOrganization(organizationId, userId);
 
         when(workspaceRepository.findById(organizationId)).thenReturn(Optional.of(workspace));
-        when(userOrganizationRepository.findByWorkspaceIdAndUserId(organizationId, userId))
+        when(userWorkspaceRepository.findByWorkspaceIdAndUserId(organizationId, userId))
                 .thenReturn(java.util.Optional.of(userWorkspace));
 
         assertDoesNotThrow(() -> administratorWorkspaceService.deleteUserOrgLink(linkUserRoleRest, TestUtils.createUserBOAdminSub()));
 
-        verify(userOrganizationRepository, times(1)).deleteById(1L);
+        verify(userWorkspaceRepository, times(1)).deleteById(1L);
     }
 
 }
